Tweaked the custom CSS to remove blank whitespace at bottom of page, and fixed one last reference to Assets

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3,3 +3,10 @@ footer.main-footer {
     display: none;
 }
 
+.main-header {
+    height: 52px !important;
+}
+
+.content-wrapper {
+    min-height: calc(100vh - 52px) !important;
+}
